# Reflection_of_CT_Projection

./: OpenCLExercise1_Basics.cl  OpenCLExercise1_Basics.cpp  meson.build
